# chorus_thing

./: .eslintrc.cjs  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
SampleData/: SampleMembers.json  SampleMusic.json
chorus_thing/: __main__.py  app.py  common.py  database.py
chorus_thing/api/v1/: __init__.py  event.py
src/: App.css  App.tsx
src/components/: Navbar.tsx
src/pages/: Events.tsx  Library.tsx  Members.tsx
tests/: test_code_compliance.py
